--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "intersection-observer": "^0.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.5.2"
+    "react-intersection-observer": "^9.5.2",
+    "vercel": "^34.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
