i seariously hy git

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,6 @@ dist-ssr
 /node_modules
 /.pnp
 .pnp.js
-.yarn/install-state.gz
 
 # testing
 /coverage
@@ -54,6 +53,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
