--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
+    "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
     "uuid": "^9.0.1",
