--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@heroicons/react": "^2.1.3",
     "@stripe/stripe-js": "^3.4.1",
     "@vercel/postgres": "^0.8.0",
@@ -33,7 +34,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
-    "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
