--- a/.env
+++ b/.env
@@ -5,15 +5,28 @@
 # POSTGRES_DB="streamwan"
 # POSTGRES_USER="zoro"
 # POSTGRES_PASSWORD="zoro*123"
-AUTH_SECRET=
-AUTH_URL=http://localhost:3000/api/auth
+# POSTGRES_URL="postgres://zoro:zoro*123@localhost:5432/streamwan"
+AUTH_SECRET="LRTtuxwALloDSQlnF+33ynHu/mSIK6mclQURaxyI/ME="
+# AUTH_URL=http://localhost:3000/api/auth
 
-POSTGRES_URL="postgres://default:QlGBn3hA5cfv@ep-falling-fire-a4p0r2v8-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_PRISMA_URL="postgres://default:QlGBn3hA5cfv@ep-falling-fire-a4p0r2v8-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NO_SSL="postgres://default:QlGBn3hA5cfv@ep-falling-fire-a4p0r2v8-pooler.us-east-1.aws.neon.tech:5432/verceldb"
-POSTGRES_URL_NON_POOLING="postgres://default:QlGBn3hA5cfv@ep-falling-fire-a4p0r2v8.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+# psql "postgres://default:VpW1Jy5faGch@ep-cold-voice-a4zwzwkv.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_URL="postgres://default:VpW1Jy5faGch@ep-cold-voice-a4zwzwkv-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:VpW1Jy5faGch@ep-cold-voice-a4zwzwkv-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:VpW1Jy5faGch@ep-cold-voice-a4zwzwkv-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:VpW1Jy5faGch@ep-cold-voice-a4zwzwkv.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
 POSTGRES_USER="default"
-POSTGRES_HOST="ep-falling-fire-a4p0r2v8-pooler.us-east-1.aws.neon.tech"
-POSTGRES_PASSWORD="QlGBn3hA5cfv"
+POSTGRES_HOST="ep-cold-voice-a4zwzwkv-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="VpW1Jy5faGch"
 POSTGRES_DATABASE="verceldb"
-AUTH_SECRET=KLN41mjSIHG2Ltks1fyauR2bCTKiGj8EXVJsi2g0GcI
+
+AUTH_GOOGLE_ID='817082266061-krnnft3k0c4f5fgii11hggiedtitthvc.apps.googleusercontent.com'
+AUTH_GOOGLE_SECRET='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'
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+#DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
