--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "@heroicons/react": "^2.1.3",
+    "@react-oauth/google": "^0.12.1",
     "@stripe/stripe-js": "^3.4.1",
     "@vercel/postgres": "^0.8.0",
     "bcrypt": "^5.1.1",
