--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "gapi-script": "^1.2.0",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-login": "^5.2.2",
     "uuid": "^9.0.1",
     "zod": "^3.23.8"
   },
