--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.3",
     "@stripe/stripe-js": "^3.4.1",
     "@vercel/postgres": "^0.8.0",
     "bcrypt": "^5.1.1",
@@ -20,6 +19,7 @@
     "next-auth": "^5.0.0-beta.18",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "uuid": "^9.0.1",
     "zod": "^3.23.8"
   },
