--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
+    "prisma": "^5.16.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
