chore: install prisma
install prisma so that i don't write stupid SQL queries, thank you!

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
+    "@prisma/client": "^5.16.0",
     "@stripe/stripe-js": "^3.4.1",
     "@vercel/postgres": "^0.9.0",
     "bcrypt": "^5.1.1",
