--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-paystack": "^5.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.23.8"
   },
