--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-paystack": "^5.0.0",
+    "react-toastify": "^10.0.5",
     "uuid": "^9.0.1",
     "zod": "^3.23.8"
   },
