--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.16.0",
+    "@auth/prisma-adapter": "^2.4.1",
+    "@prisma/client": "^5.16.1",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
