--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "heroicons": "^2.1.5",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "pg": "^8.12.0",
