--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
+    "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.16.1",
+    "@teamhanko/hanko-elements": "^0.12.0",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
-    "heroicons": "^2.1.5",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "pg": "^8.12.0",
