--- a/package.json
+++ b/package.json
@@ -15,21 +15,14 @@
     "@auth/prisma-adapter": "^2.4.1",
     "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.16.1",
-    "@teamhanko/hanko-elements": "^0.12.0",
-    "bcrypt": "^5.1.1",
-    "clsx": "^2.1.1",
-    "dotenv": "^16.4.5",
+    "jose": "^5.6.3",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
-    "pg": "^8.12.0",
     "prisma": "^5.16.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1",
     "react-paystack": "^5.0.0",
-    "react-toastify": "^10.0.5",
-    "uuid": "^9.0.1",
-    "zod": "^3.23.8"
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
