--- a/package.json
+++ b/package.json
@@ -6,16 +6,15 @@
     "build": "next build",
     "dev": "next dev",
     "start": "next start",
-    "lint": "next lint"
-  },
-  "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    "lint": "next lint",
+    "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "jose": "^5.6.3",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
+    "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
     "react-paystack": "^5.0.0",
@@ -24,6 +23,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.14.9",
+    "@types/pg": "^8.11.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
