--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "argon2": "^0.40.3",
     "jose": "^5.6.3",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
