--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "argon2": "^0.40.3",
+    "crypto-js": "^4.2.0",
     "jose": "^5.6.3",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
