--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "argon2": "^0.40.3",
+    "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
     "jose": "^5.6.3",
     "next": "14.2.3",
@@ -35,6 +36,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.2",
+    "webpack-node-externals": "^3.0.0"
   }
 }
