--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
     "jose": "^5.6.3",
-    "next": "14.2.3",
+    "next": "^14.2.5",
     "next-auth": "^5.0.0-beta.18",
     "pg": "^8.12.0",
     "react": "^18",
