--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "argon2": "^0.40.3",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
     "jose": "^5.6.3",
     "next": "^14.2.5",
     "next-auth": "^5.0.0-beta.18",
