--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "next": "^14.2.5",
     "next-auth": "^5.0.0-beta.18",
     "pg": "^8.12.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-paystack": "^5.0.0",
+    "react-server-dom-webpack": "^0.0.1",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
