--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
     "dotenv": "^16.4.5",
     "jose": "^5.6.3",
     "next": "^14.2.5",
-    "next-auth": "^5.0.0-beta.18",
     "pg": "^8.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-paystack": "^5.0.0",
-    "react-server-dom-webpack": "^0.0.1",
-    "react-toastify": "^10.0.5"
+    "react-server-dom-webpack": "^0.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -38,7 +36,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.2",
+    "typescript": "^5.4.0",
     "webpack-node-externals": "^3.0.0"
   }
 }
