--- a/package.json
+++ b/package.json
@@ -25,18 +25,19 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.13",
     "@types/pg": "^8.11.6",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.0",
+    "typescript": "^5.2.2",
+    "webpack-dev-server": "^5.0.4",
     "webpack-node-externals": "^3.0.0"
   }
 }
