--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Run `openssl rand -base64 32` in your terminal
-AUTH_SECRET=
+AUTH_SECRET=''
 
 # I used cockroach db
-DATABASE_URL=
+DATABASE_URL=""
 
 # You only need the LIVE public key. (https://paystack.com)
-PAYSTACK_LIVE_PUBLIC_KEY=
+PAYSTACK_LIVE_PUBLIC_KEY=""
