--- a/package.json
+++ b/package.json
@@ -1,43 +1,34 @@
 {
-  "name": "streamwan",
+  "name": "next-test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "argon2": "^0.40.3",
-    "crypto-browserify": "^3.12.0",
-    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
+    "heroicons": "^2.1.5",
     "jose": "^5.6.3",
-    "next": "^14.2.5",
-    "pg": "^8.12.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-paystack": "^5.0.0",
-    "react-server-dom-webpack": "^0.0.1"
+    "next": "14.2.5",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-paystack": "^6.0.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20.14.13",
+    "@types/node": "^20",
     "@types/pg": "^8.11.6",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/uuid": "^9.0.8",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8.4.40",
-    "tailwindcss": "^3.4.7",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.2.2",
-    "webpack-dev-server": "^5.0.4",
-    "webpack-node-externals": "^3.0.0"
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
+    "pg": "^8.12.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
