--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "heroicons": "^2.1.5",
     "jose": "^5.6.3",
